--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -78,6 +78,14 @@ $typography: (
     font-weight: 400,
     line-height: 1rem,
   ),
+  label-xs: (
+    font-family: var(--pdz-font-regular),
+    font-size: 0.65rem,
+    font-weight: 500,
+    line-height: 0.75rem,
+    text-transform: uppercase,
+    opacity: 0.7,
+  ),
   label-sm: (
     font-family: var(--pdz-font-regular),
     font-size: 0.75rem,
